Apply spotless
Signed-off-by: currantw <taylor.curran@improving.com>